--- a/templates/idas/profile.html
+++ b/templates/idas/profile.html
@@ -1,9 +1,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>profile</h2>
 
-  sdrgtfg
+  <section class="py-20">
+    <div class="container prose prose-xl">
+      <h1>
+        Profile information
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aperiam dolores et fugiat id iusto non
+        omnis provident quisquam vitae?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aperiam dolores et fugiat id iusto non
+        omnis provident quisquam vitae?
+      </p><p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aperiam dolores et fugiat id iusto non
+        omnis provident quisquam vitae?
+      </p><p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aperiam dolores et fugiat id iusto non
+        omnis provident quisquam vitae?
+      </p><p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aperiam dolores et fugiat id iusto non
+        omnis provident quisquam vitae?
+      </p><p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aperiam dolores et fugiat id iusto non
+        omnis provident quisquam vitae?
+      </p>
 
+
+    </div>
+  </section>
 
 {% endblock %}
