--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,4 +1,17 @@
-<a href="{% url 'home' %}">Home</a>
-<a href="{% url 'logout' %}">Logout</a>
-<a href="{% url 'login' %}">Login</a>
-<a href="{% url 'signup' %}">Signup</a>
+<header class="py-6 bg-primary text-white font-medium">
+    <div class="container flex items-center gap-4 justify-between">
+        <div class="flex items-ecnter gap-3">
+            <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'preset_create' %}">Create Preset</a>
+            <a href="{% url 'preset_list' %}">Preset List</a>
+            <a class="">
+                Booking
+            </a>
+        </div>
+        <div class="flex items-center gap-3">
+            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'signup' %}">Signup</a>
+        </div>
+    </div>
+</header>
