--- a/templates/idas/preset_create.html
+++ b/templates/idas/preset_create.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>preset</h2>
 
-<form method="post" action="{% url 'preset_create' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-  </form>
+    <section class="py-20">
+        <div class="container prose prose-base max-w-lg">
+            <h1>
+              Create preset
+            </h1>
+
+            <form method="post" action="{% url 'preset_create' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Save</button>
+            </form>
+        </div>
+    </section>
 
 {% endblock %}
