--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign Up</h2>
-  <form method="post" action="{% url 'signup' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
+  <section class="py-20">
+    <div class="container max-w-lg">
+      <h1 class="text-5xl font-bold uppercase">
+        Signup
+      </h1>
+      <form
+          class="mt-12"
+          method="post"
+          action="{% url 'login' %}"
+      >
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Signup</button>
+      </form>
+    </div>
+  </section>
 {% endblock %}
